fixes padding for blockquotes, especially in sliders on mobile

--- a/source/stylesheets/components/_slider.scss
+++ b/source/stylesheets/components/_slider.scss
@@ -9,15 +9,18 @@
     h2.subheader {
       margin-bottom: modular-scale(3);
     }
-    blockquote {
-      font-size: modular-scale(1);
-    }
     .button-row {
       padding-right: 0.2em;
       margin-bottom: 0;
     }
     .button {
       margin-right: 0;
+    }
+    blockquote {
+      padding: 0 modular-scale(1);
+      & + .subheader {
+        padding: 0 modular-scale(1);
+      }
     }
   }
   &.with-padding .slide {
